# cxx-training

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  xmake.lua
.github/workflows/: build.yml
crimson/: CMakeLists.txt  README.md  xmake.lua
crimson/include/crimson/: cn_alloc.h  cn_array.h  cn_config.h  cn_list.h  cn_log.h  cn_pointer.h  cn_pool.h  cn_sort.h  cn_str.h  cn_string.h  cn_type.h  cn_utils.h  crimson.h
crimson/include/crimson_test/: cn_test_header.h
crimson/src/: cn_alloc.c  cn_array.c  cn_list.c  cn_log.c  cn_pointer.c  cn_sort.c  cn_str.c  cn_string.c  cn_type.c  cn_utils.c
crimson/test/: cn_array_test.cc  cn_list_test.cc  cn_pointer_test.cc  crimson_test.cc
lcf_json/: CMakeLists.txt  xmake.lua
lcf_json/include/: lcf_json.h  test_macro.h
lcf_json/src/: lcf_json.c  test.c
mini_std/: CMakeLists.txt  xmake.lua
mini_std/src/: encode.h  lru_cache.h  main.cpp  memblock.cpp  memblock.h  option.h
mini_std/src/smart_ptr/: ref_count.h  shared_ptr.h  weak_ptr.h
simplified-csapp/: CMakeLists.txt  README.md  TODO.md  xmake.lua
simplified-csapp/include/csapp/: s_alloc.h  s_array.h  s_common.h  s_config.h  s_cpu.h  s_csapp.h  s_instruction.h  s_list.h  s_log.h  s_macros.h  s_memory.h  s_string.h  s_types.h  s_utils.h
simplified-csapp/include/csapp_test/: test_autoheader.h
simplified-csapp/src/: CMakeLists.txt  s_alloc.c  s_array.c  s_cpu.c  s_instruction.c  s_string.c  s_utils.c
simplified-csapp/src/csapp/: s_alloc.c  s_alloc.h  s_array.c  s_array.h  s_common.c  s_common.h  s_config.h  s_cpu.c  s_cpu.h  s_csapp.h  s_instruction.c  s_instruction.h  s_list.c  s_list.h  s_log.c  s_log.h  s_macros.h  s_memory.c  s_memory.h  s_string.c  s_string.h  s_types.h  s_utils.c  s_utils.h
simplified-csapp/test/: CMakeLists.txt  test_autoheader.h  test_instruction.cc  test_main.cc  test_memory.cc  test_other.cc
test-c/: CMakeLists.txt  xmake.lua
test-c/include/test/: cacheline_test.h
test-c/src/: main.c
test-c/src/test/: cacheline_test.c
test-cpp23/: xmake.lua
test-cpp23/src/: helloworld.cppm  main.cpp
